syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc TryContext (TcRequest) returns (TcReply) {}
}

message HelloRequest {
  string name = 1;
  string error = 2;
}

message HelloReply {
  string message = 1;
}

message Error {
  int64 code = 1;
  string message = 2;
}

message TcRequest {
  string from = 1;
}

message TcReply {
  string msg = 1;
}
